--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   </div>
   <div class="form-group">
     <label for="finalStop">Destination</label>
-    <input class="form-control" id="#finalStop-input" placeholder="The Roundhouse" type="text">
+    <input class="form-control" id="finalStop-input" placeholder="The Roundhouse" type="text">
   </div>
   <div class="form-group">
     <label for="firstArrival">First Train Time (Military Time)</label>
@@ -62,10 +62,10 @@
   </div>
   <div class="form-group">
     <label for="rate-input">Frequency</label>
-    <input class="form-control" id="frequeny-input" placeholder="0800" type="text">
+    <input class="form-control" id="frequency-input" placeholder="0800" type="text">
   </div>
   
-  <button class="btn btn-primary float-left" id="add-employee-btn">Submit</button>
+  <button class="btn btn-primary float-left" id="add-train-btn">Submit</button>
 </form>
 
 </div>
